--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
       const registerServiceWorker = async () => {
         if ("serviceWorker" in navigator) {
           try {
-            const registration = await navigator.serviceWorker.register("/sw.js", {
-              scope: "/",
+            const registration = await navigator.serviceWorker.register("sw.js", {
+              scope: "/nz-skyline/",
             });
             if (registration.installing) {
               console.log("Service worker installing");
