Load SW to match scope

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       const registerServiceWorker = async () => {
         if ("serviceWorker" in navigator) {
           try {
-            const registration = await navigator.serviceWorker.register("sw.js", {
+            const registration = await navigator.serviceWorker.register("/nz-skyline/sw.js", {
               scope: "/nz-skyline/",
             });
             if (registration.installing) {
